<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecureShare</string>
    <string name="full_name">Full Name</string>
    <string name="aadhar_num">Aadhar Card Number </string>
    <string name="button_verify">Verify</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="Full">Full Name</string>
    <string name="Aadhar">Aadhar Number</string>
    <string name="Verify">Verified!</string>
    <string name="Uname">Username</string>
    <string name="Password">Password</string>
    <string name="User_name">Username</string>
    <string name="Pass_word">Password</string>
    <string name="RePassword">Confirm Password</string>
    <string name="button_Create">Create Account</string>
    <string name="Re_Password">Confirm Password </string>
    <string name="title_activity_get_image">GetImageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_open_camera">OpenCamera</string>
    <string name="button_Camera">Camera</string>
    <string name="button_Upload">Upload</string>
    <string name="title_activity_first_view">FirstViewActivity</string>
    <string name="tabtextview">TextView</string>
    <string name="home">Home</string>
    <string name="device_name">Device</string>
    <string name="manuf_name">Manufacturer</string>    
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="capture_image">Capture Image</string>
    

</resources>
