<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.secureshare.VerifyActivity" >

  
      <TextView 
       android:layout_height="wrap_content" 
       android:layout_width="wrap_content"></TextView>
      
       <TextView android:text="@string/Uname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content" 
        android:layout_width="126dp"></TextView>
       
        <EditText android:id="@+id/User_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/User_name" />
    
        <TextView android:text="@string/Password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content" 
        android:layout_width="126dp"></TextView>
        
        <EditText android:id="@+id/Pass_word"
        android:inputType="textPassword"      
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Pass_word" />
          
          
        <TextView android:text="@string/Re_Password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content" 
        android:layout_width="126dp"></TextView>
          
        <EditText android:id="@+id/RePassword"
        android:inputType="textPassword"       
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RePassword" />
          
        <Button android:id="@+id/button_Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Create"
        android:onClick="Opencamera">
       
               
         </Button> 
        
        
      
</LinearLayout>
