<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    
    android:orientation="vertical" 
    tools:context="com.example.secureshare.OpenCamera" >

    
    
    <Button android:id="@+id/button_Camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Camera">
                       
         </Button>
         
        <ImageView
           android:id="@+id/imageView1"
           android:layout_width="match_parent"
           android:layout_height="300dp"
          
           android:contentDescription="@string/hello_world"
           android:src="@drawable/ic_launcher" />
        
        <Button android:id="@+id/button_Upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Upload"
        android:onClick="GoogleVerify">
                       
         </Button>
        

</LinearLayout>
